Switch to G1 GC for UI tests
Bug: 161619075
Change-Id: Ieee47a839a7b4b8c2a42acab472b624b26fa2188

GitOrigin-RevId: ed1811f1c87ad05030134f0ac748382886c2a6d5